# ComfyUI-FLUX-BFL-API

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  __init__.py  config.ini  pyproject.toml
.claude/: settings.json
.claude/agents/: bfl-explorer.md  bfl-node-reviewer.md
.claude/commands/: check-secrets.md  commit.md  lint.md  new-node.md  version-bump.md
.claude/scripts/: block-api-key-commit.sh  post-edit-ruff.sh  session-start-context.sh
.claude/skills/bfl-api-pattern/: SKILL.md
.claude/skills/bfl-new-node/: SKILL.md
.github/workflows/: publish.yml
nodes/: api_node.py  base.py  config.py  config_node.py  finetune.py  flux_tools.py  status.py  utils.py
web/js/: credits.js
workflows/: BFL-API-basics.json  BFL-API-finetune.json  BFL-API-flux2.json  BFL-API-tools.json  BFL-API-workflow.json  Flux-BFL-API-workflow.json
