[project]
name = "comfyui-flux-bfl-api"
description = "Custom nodes for integrating Flux models with the BFL API."
version = "1.0.6"
license = {file = "LICENSE"}
dependencies = ["torch"]

[project.urls]
Repository = "https://github.com/gelasdev/ComfyUI-FLUX-BFL-API"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "gelas"
DisplayName = "ComfyUI-FLUX-BFL-API"
Icon = ""