[project]
name = "comfyui-flux-bfl-api"
description = "Custom nodes for integrating Flux models with the BFL API."
version = "1.1.0"
license = {file = "LICENSE"}
dependencies = ["torch"]

[project.optional-dependencies]
dev = ["ruff>=0.5.0"]

[project.urls]
Repository = "https://github.com/gelasdev/ComfyUI-FLUX-BFL-API"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "gelas"
DisplayName = "ComfyUI-FLUX-BFL-API"
Icon = ""

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
